--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li class="menu-item"><a href="#about" data-effect="about" class="nav-link">About</a></li>
 					<li class="menu-item"><a href="posts.html" data-effect="about" class="nav-link">Posts</a></li>
 					<li class="menu-item"><a href="videos.html" data-effect="about" class="nav-link">Videos</a></li>
-					<li class="menu-item"><a href="#shopping.html" data-effect="shop" class="nav-link">Shop</a></li>
+					<li class="menu-item"><a href="shop.html" data-effect="shop" class="nav-link">Shop</a></li>
 					<li class="menu-item nav-item">
 						<a href="noti.html" data-effect="collection" class="nav-link">Notification</a>
 					</li>
@@ -171,7 +171,7 @@
 				<div class="product-list">
 					<div class="product-item">
 						<div class="image-holder">
-							<img src="images/plant-item4.jpg" alt="plant" class="image-product">
+							<img src="images/item4.jpg" alt="plant" class="image-product">
 
 
 							<div class="like-bar">
@@ -184,7 +184,7 @@
 
 						</div>
 						<div class="product-inner">
-							<a class="add-to-cart" href="" target="_self"> 
+							<a class="add-to-cart" href="shop.html" target="_self"> 
 							<span class="cart-text">Shop Now</span>
 							<i class="icon icon-arrow-right"></i> 
 							</a>
@@ -201,11 +201,11 @@
 				<div class="product-list">
 					<div class="product-item">
 						<div class="image-holder">
-							<img src="images/plant-item5.jpg" alt="plant" class="image-product">
+							<img src="images/item5.jpg" alt="plant" class="image-product">
 							<i class="icon icon-like-button"></i>
 						</div>
 						<div class="product-inner">
-							<a class="add-to-cart" href="" target="_self"> 
+							<a class="add-to-cart" href="shop.html" target="_self"> 
 							<span class="cart-text">Shop Now</span>
 							<i class="icon icon-arrow-right"></i> 
 							</a>
@@ -222,11 +222,11 @@
 				<div class="product-list">
 					<div class="product-item">
 						<div class="image-holder">
-							<img src="images/plant-item6.jpg" alt="plant" class="image-product">
+							<img src="images/item6.jpg" alt="plant" class="image-product">
 							<i class="icon icon-like-button"></i>
 						</div>
 						<div class="product-inner">
-							<a class="add-to-cart" href="" target="_self"> 
+							<a class="add-to-cart" href="shop.html" target="_self"> 
 							<span class="cart-text">Shop Now</span>
 							<i class="icon icon-arrow-right"></i> 
 							</a>
@@ -243,11 +243,11 @@
 				<div class="product-list">
 					<div class="product-item">
 						<div class="image-holder">
-							<img src="images/plant-item7.jpg" alt="plant" class="image-product">
+							<img src="images/item7.jpg" alt="plant" class="image-product">
 							<i class="icon icon-like-button"></i>
 						</div>
 						<div class="product-inner">
-							<a class="add-to-cart" href="" target="_self"> 
+							<a class="add-to-cart" href="shop.html" target="_self"> 
 							<span class="cart-text">Shop Now</span>
 							<i class="icon icon-arrow-right"></i> 
 							</a>
@@ -309,7 +309,7 @@
 
 			<div class="col-md-6 right-column">
 				<figure class="single-image-holder">
-					<img src="images/plant-item15.png" alt="plant-image">
+					<img src="images/choose.png" alt="plant-image">
 				</figure>
 			</div>
 		</div>
@@ -383,7 +383,7 @@
 						</div>
 
 						<div class="btn-wrap align-center margin-small">
-							<a href="blog.html" class="btn btn-black btn-xlarge btn-rounded">More Blog
+							<a href="posts.html" class="btn btn-black btn-xlarge btn-rounded">More Blog
 							<i class="icon icon-arrow-right"></i></a>
 						</div>
 
@@ -532,13 +532,10 @@
 							<a href="#">About</a>
 						</li>
 						<li class="menu-item">
-							<a href="#">Our vision</a>
+							<a href="posts.html">Posts</a>
 						</li>
 						<li class="menu-item">
-							<a href="#">Posts</a>
-						</li>
-						<li class="menu-item">
-							<a href="#">Videos</a>
+							<a href="videos.html">Videos</a>
 						</li>
 					</ul>
 				</div>
