--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <nav>
-      <h1>Social Media App</h1>
+      <h1>Your Profile</h1>
       <button id="logout-btn">Logout</button>
       <button    onclick="goBackToHome();" >feed</button>
     </nav>
@@ -56,7 +56,7 @@
    
   </section>
   <div class="main-container">
-    <h2>Your Posts</h2>
+    <h2>Your Posts</h2><br>
     <div id="profile-posts" class="posts-container"></div>
     </div>
 
