Updated Logos For All Pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header id="header" class="fixed">
 	<div id="header-wrap">
 		<div class="main-logo">
-			<a href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<a href="index.html"><img src="images/logo 03.png" alt="logo"></a>
 		</div>
 
 		<nav id="navbar">
@@ -509,7 +509,7 @@
 			
 			<div class="col-md-3 footer-intro">				
 				<div class="footer-menu">
-					<img src="images/logo.png" alt="logo" class="footer-logo">
+					<img src="images/logo 03.png" alt="logo" class="footer-logo">
 					<p>Upcycle Market – Redefining waste, inspiring creativity, and shaping a sustainable future.</p>
 
 					<div class="form-content">						
