--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
 <header id="header" class="fixed">
 	<div id="header-wrap">
 		<div class="main-logo">
-			<a href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<a href="index.html"><img src="images/logo 03.png" alt="logo"></a>
 		</div>
 
 		<nav id="navbar">
