--- a/videos.html
+++ b/videos.html
@@ -31,17 +31,17 @@
 					<li class="menu-item"><a href="index.html" data-effect="Home" class="nav-link">Home</a></li>
 					<li class="menu-item"><a href="index.html" data-effect="about" class="nav-link">About</a></li>
 					<li class="menu-item"><a href="posts.html" data-effect="about" class="nav-link">Posts</a></li>
-					<li class="menu-item"><a href="videos.html" data-effect="about" class="nav-link">Videos</a></li>
+					<!-- <li class="menu-item"><a href="videos.html" data-effect="about" class="nav-link">Videos</a></li>
 					<li class="menu-item"><a href="shop.html" data-effect="shop" class="nav-link">Shop</a></li>
 					<li class="menu-item nav-item">
 						<a href="noti.html" data-effect="collection" class="nav-link">Notification</a>
-					</li>
+					</li> -->
 
 				</ul>
 			</div>
 
 			<div class="right-element icon-element">
-				<div class="search-bar">
+				<!-- <div class="search-bar">
 					<a href="#" class="search-button search-toggle" data-selector="#header-wrap">
 						<i class="icon icon-search"></i>
 					</a>
@@ -61,7 +61,7 @@
 						<i class="icon icon-like-button"></i>
 						<i class="icon icon-liked-button"></i>	
 					</a>
-			    </div><!--like-bar-->
+			    </div>
 
 				<div class="cart for-buy">
 					<a href="#">
@@ -70,7 +70,8 @@
 					</a>
 				</div>
 
-			</div><!--right-element-->
+			</div> -->
+      <!--right-element-->
 
 		</nav>
 
