--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upcycle Market</title>
-  <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
-    <link rel="stylesheet" type="text/css" href="css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="posts.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
-</head>
+  <head>
+		<title>Upcycle Market</title>
+		<meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta name="format-detection" content="telephone=no">
+	    <meta name="apple-mobile-web-app-capable" content="yes">
+	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+	    <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
+	    <link rel="stylesheet" type="text/css" href="css/vendor.css">
+	    
+	    <link rel="stylesheet" type="text/css" href="style.css">
+	    <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
+	</head>
 <body>
   <header>
 <!-- 
@@ -32,18 +30,18 @@
 
     <div id="header-wrap">
       <div class="main-logo">
-        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="/Upcycle_Market/images/logo 03.png" alt="logo"></a>
       </div>
   
       <nav id="navbar">
         <!-- <button id="logout-btn"  onclick="goBackToHome();" >feed</button>  -->
         <div class="main-menu" id="navigation">
           <ul class="menu-list navbar-nav">
-            <li class="menu-item"><a href="index.html" data-effect="Home" class="nav-link">Home</a></li>
-            <li class="menu-item"><a href="index.html" data-effect="about" class="nav-link">About</a></li>
+            <li class="menu-item"><a href="/Upcycle_Market/index.html" data-effect="Home" class="nav-link">Home</a></li>
+            <li class="menu-item"><a href="/Upcycle_Market/index.html" data-effect="about" class="nav-link">About</a></li>
             <!-- <li class="menu-item"><a href="posts.html" data-effect="about" class="nav-link"  onclick="goBackToHome();">Posts</a></li> -->
-            <button id="go-to-profile"  onclick="redirectToProfile()">Profile</button>
-            <li class="menu-item"><a href="videos.html" data-effect="about" class="nav-link">Videos</a></li>
+            <!-- <button id="go-to-profile"  onclick="redirectToProfile()">Profile</button> -->
+            <!-- <li class="menu-item"><a href="videos.html" data-effect="about" class="nav-link">Videos</a></li>
             <li class="menu-item"><a href="shop.html" data-effect="shop" class="nav-link">Shop</a></li>
             <li class="menu-item nav-item">
               <a href="noti.html" data-effect="collection" class="nav-link">Notification</a>
@@ -51,42 +49,24 @@
             <li class="menu-item">
               <a href="posts.html" data-effect="latest-blog" class="nav-link">Blog</a>
               <button    id="logout-btn"  >Logout</button>
-            </li>
+            </li> -->
   
           </ul>
         </div>
   
         <div class="right-element icon-element">
-          <div class="search-bar">
-            <a href="#" class="search-button search-toggle" data-selector="#header-wrap">
-              <i class="icon icon-search"></i>
+          <div class="user-account">
+            <a href="#" class="account-btn">
+                <i class="icon icon-user"></i>
+                <span>User</span>
             </a>
-            <form role="search" method="get" class="search-box">
-              <input class="search-field text search-input" placeholder="Search" type="search">
-            </form>
+            <div class="dropdown-menu hidden">
+              <button id="go-to-profile"  onclick="redirectToProfile()">Profile</button>
+              <button id="logout-btn">Logout</button>
+            </div>
           </div>
-  
-          <div class="user-account for-buy">
-            <a href="#">
-            <i class="icon icon-user"></i>
-            </a>
-          </div>
-  
-          <div class="like-bar for-buy">
-            <a href="#">
-              <i class="icon icon-like-button"></i>
-              <i class="icon icon-liked-button"></i>	
-            </a>
-            </div><!--like-bar-->
-  
-          <div class="cart for-buy">
-            <a href="#">
-            <i class="icon icon-account"></i>
-            <span>0</span>
-            </a>
-          </div>
-  
-        </div><!--right-element-->
+        </div>
+        <!--right-element-->
   
       </nav>
   
