--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
     <div id="header-wrap">
       <div class="main-logo">
-        <a href="index.html"><img src="/Upcycle_Market/images/logo 03.png" alt="logo"></a>
+        <a href="index.html"><img src="./images/logo 03.png" alt="logo"></a>
       </div>
   
       <nav id="navbar">
