home icon resolved

--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
 	    <meta name="format-detection" content="telephone=no">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-	    <link rel="stylesheet" type="text/css" href="/Upcycle_Market_/icomoon/icomoon.css">
+	    <link rel="stylesheet" type="text/css" href="./icomoon/icomoon.css">
 	    <link rel="stylesheet" type="text/css" href="css/vendor.css">
 	    
 	    <link rel="stylesheet" type="text/css" href="home.css">
