secure keys and corrected disable keys

--- a/public/home.html
+++ b/public/home.html
@@ -48,7 +48,7 @@
 				  </a>
 				  <div class="dropdown-menu hidden">
 					<button id="go-to-profile"  onclick="redirectToProfile()">Profile</button>
-					<button id="logout-btn">Logout</button>
+					<button id="logout-btn" onclick="window.location.href='index.html';">posts</button>
 				  </div>
 				</div>
 			  </div>
