Fix the styling

--- a/public/home.html
+++ b/public/home.html
@@ -83,7 +83,7 @@
 					</a>
 				</div>
 			</div><!--banner-content--> 
-			<img src="images/main-banner2.png" alt="banner">
+			<img src="images/main-banner.png" alt="banner">
 		</div><!--swiper-slide-->	
 
 		<div class="swiper-slide">
